# ghretos

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/actions/setup-env/: action.yaml
.github/workflows/: ci.yaml
docs/: .readthedocs.yaml  api.rst  conf.py  index.rst
src/ghretos/: __init__.py  models.py  parsing.py
tests/: test_ghretos.py  test_models.py  test_parsing.py
