[project]
name = "ghretos"
version = "0.0.1a1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arielle", email = "me@arielle.codes" }
]
requires-python = ">=3.10"
dependencies = [
    "yarl>=1.0",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
]
test = [
    "pytest>=8.4.2",
]
tools = [
    "basedpyright>=1.33.0",
    "nox>=2025.11.12",
    "prek>=0.2.1,<0.3",
    "ruff>=0.14.5",
]

[tool.uv.dependency-groups]
docs.requires_python = ">=3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
  # flake8-commas
  "COM", # Missing Docstrings
  "D100",
  "D101",
  "D104",
  "D105",
  "D107", # Docstring Whitespace
  "D212", # Docstring Content
  "D401",
  "D404",
  "D406",
  "D407",
  "D410",
  "D411",
  "D416", # Type Annotations
  "ANN002",
  "ANN003",
  "ANN204",
  "ANN206",
  "ANN401", # try-except-pass
  "S110", # temporarily disabled
  "C901", # mccabe
  "G004", # Logging statement uses f-string
  "S101", # Use of `assert` detected
  "S311", # pseduo-random generators, random is used everywhere for random choices.
  "ARG",
  "BLE",
  "ERA",
  "FBT",
  "FIX",
  "FURB",
  "PGH",
  "PLC",
  "PLR",
  "PLW",
  "RET505",
  "RET506",
  "RUF012",
  "SIM105",
  "SIM108",
  "SLF",
  "TD",
  "TRY",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "INP"]
"docs/conf.py" = ["INP"]

[tool.ruff.lint.isort]
known-first-party = ["ghretos"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pyright]
include = ["src", "*.py"]
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"
